# sea-orm-newtype

./: Cargo.toml  readme.md
examples/: email.rs  email_expand.rs  id.rs  id_expand.rs  integer.rs  integer_expand.rs
sea-orm-newtype-derive/: Cargo.toml  LICENSE
sea-orm-newtype-derive/src/: inner.rs  lib.rs
sea_orm_newtype_derive/: Cargo.toml
sea_orm_newtype_derive/src/: inner.rs  lib.rs
src/: lib.rs
