[workspace]
members = [".", "sea-orm-newtype-derive"]

[package]
name = "sea-orm-newtype"
version = "0.0.1"
edition = "2021"
authors = ["Asami <asami73dgreen63@gmail.com>"]
description = "helper crate to implement new-type pattern for sea-orm"
license = "MIT"
repository = "https://github.com/deepgreenAN/sea-orm-newtype"
readme = "README.md"
categories = ["database"]
keywords = ["sea-orm"]

[dependencies]
sea-orm-newtype-derive = { version = "0.0.1", path = "sea-orm-newtype-derive" }
sea-orm = "^0"

[dev-dependencies]
uuid = "1.4.1"
email_address = "0.2.4"
thiserror = "1.0.44"