[package]
name = "sea-orm-newtype-derive"
version = "0.0.1"
edition = "2021"
authors = ["Asami <asami73dgreen63@gmail.com>"]
description = "derive macro for sea-orm-newtype"
license = "MIT"
repository = "https://github.com/deepgreenAN/sea-orm-newtype"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = ["full"]}
darling = "^0.20"