[package]
name = "sea_orm_newtype_derive"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = ["full"]}
darling = "^0.20"